Get Upgrade-3.2.1 branch into buildable state.
- stack.yaml now points to local bindings-GLFW for development. This should be
  the 3.2.1 branch of bindings-GLFW until it gets merged into master.
- Moved StandardCursorShape into genC.hs
- Added deepseq version bounds and dependencies to tests.
- Some small formatting.

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,11 +1,7 @@
 flags: {}
 packages: 
-- '.'
-
-- location:
-    git: https://github.com/bsl/bindings-GLFW.git
-    commit: HEAD
-  extra-dep: true
+- .
+- ../bindings-GLFW
 
 extra-deps: []
-resolver: lts-11.1
+resolver: nightly-2018-04-08
