--- a/GLFW-b.cabal
+++ b/GLFW-b.cabal
@@ -49,8 +49,8 @@ library
     Graphics.UI.GLFW.Types
 
   build-depends:
-      base           < 5
-    , deepseq
+      base          <  5
+    , deepseq       >= 1.1.0.0
     , bindings-GLFW >= 3.1.2.0
 
 --------------------------------------------------------------------------------
@@ -70,12 +70,12 @@ test-suite main
     Graphics.UI.GLFW.C
     Graphics.UI.GLFW.Types
   build-depends:
-    GLFW-b,
-    HUnit                >= 1.3 && < 1.7,
-    base                  < 5,
-    bindings-GLFW        >= 3.1.2.0,
-    test-framework       == 0.8.*,
-    test-framework-hunit == 0.3.*
+      base                 <  5
+    , HUnit                >= 1.3 && < 1.7
+    , bindings-GLFW        >= 3.1.2.0
+    , deepseq              >= 1.1.0.0
+    , test-framework       == 0.8.*
+    , test-framework-hunit == 0.3.*
 
 --------------------------------------------------------------------------------
 
